# FinanceAgent

./: README.md  chunker.py  main.py  pyproject.toml  revenue_agent_http.py
analysis_output/: document_token_stats.csv  table_token_stats.csv
example/: example.ipynb  plot.html
models/: scraper.py
preprocessors/: chunker.py  normalizer.py  remove.py
schema/: data.py
screw/: agents.py
security/: find_missing.py  post_scan.py  pre_scan.py
utils/: downloads_master.py  fetch_data.py  utils.py
