[project]
name = "financeagent"
version = "0.1.0"
description = ""
authors = [
    {name = "nai min Wang",email = "ansonwang510@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp (>=3.13.1,<4.0.0)",
    "bs4 (>=0.0.2,<0.0.3)",
    "rapidfuzz (>=3.14.1,<4.0.0)",
    "tenacity (>=9.1.2,<10.0.0)",
    "click (>=8.3.0,<9.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "arelle (>=2.2,<3.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "json5 (>=0.12.1,<0.13.0)"
]

[tool.poetry]
packages = [
    { include = "security" },
    { include = "schema" },
    { include = "screw" },
    { include = "utils"}
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
